Fixed background-attachment for the hero image on mobile. TODO: - Decide on color scheme & apply - Decide on font set & apply - Fix hero nav bar for mobile - Add new pictures - Create formats for other screen sizes

--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -31,6 +31,7 @@
 
 	h2 {
 		background-image: $img;
+		color: #fff;
 
 		display: flex;
 		justify-content: center;
@@ -129,20 +130,34 @@
 /* Main styles */
 body {
 	margin: 0px;
+	background-color: #fff;
 }
 
 
 #hero {
-	background-image: var(--img__hero);
-	background-size: cover;
-	background-attachment: fixed;
-	
 	display: flex;
 	height: 40em;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 3em;
+	overflow: hidden;
+	position: relative;
+
+
+	&::after {
+		content: ' ';
+		position: fixed; // instead of background-attachment
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: var(--img__hero);
+		background-size: cover;
+		will-change: transform; // creates a new paint layer
+		z-index: -5;
+		overflow: hidden;
+	}
 
 	#hero__navbar {
 		display: flex;
@@ -152,11 +167,25 @@ body {
 
 	@extend %Navbar;
 
+	h1 {
+		color: #fff;
+		font-size: 3rem;
+	}
+
+	h3 {
+		color: #fff;
+	}
+
 	a {
 		color: #000;
 	}
 } /* hero */
 
+
+#main-content {
+	background-color: #fff;
+	padding-top: 2rem;
+}
 
 #about-me {
 	margin: var(--margin__main-content);
@@ -201,7 +230,9 @@ body {
 	display: flex;
 	flex-direction: column;
 
-	margin: var(--margin__main-content);
+	padding-bottom: var(--margin__main-content);
+	margin-left: var(--margin__main-content);
+	margin-right: var(--margin__main-content);
 
 	h2 {
 		text-align: center;
